TestSuite/errors/err0526_deduce_generic_without_braces.pas
//!Обобщенная подпрограмма f1 не может быть аргументом
function f1<T> := 1;
begin
  var x := f1 + 2;
end.